--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
     <h3>Pages</h3>
     <div id=pages></div>
     <script>
-      const pageQuery = 'rootFolder=src&css=./src/css/variablesCustom.css&login=./src/es/components/web-components-toolbox/src/es/components/msrc/login/default-/default-.html&logo=./src/es/components/atoms/logo/default-/default-.html&nav=./src/es/components/web-components-toolbox/src/es/components/molecules/navigation/alnatura-/alnatura-.html&footer=./src/es/components/organisms/footer/default-/default-.html'
+      const rootFolder = 'src'
+      const css = './src/css/variablesCustom.css'
+      const login = './src/es/components/web-components-toolbox/src/es/components/msrc/login/default-/default-.html'
+      const logo = './src/es/components/atoms/logo/default-/default-.html'
+      const nav = './src/es/components/molecules/navigation/default-/default-.html'
+      const footer = './src/es/components/organisms/footer/default-/default-.html'
+      const footerCustom = './src/es/components/organisms/footer/custom-/custom-.html'
+      const pageQueryDefault = `rootFolder=${rootFolder}&css=${css}&login=${login}&logo=${logo}&nav=${nav}&footer=${footer}`
+      const pageQueryCustomProjectFooter = `rootFolder=${rootFolder}&css=${css}&login=${login}&logo=${logo}&nav=${nav}&footer=${footerCustom}`
       document.querySelector('#pages').innerHTML = /* HTML */`
       <ul>
-        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQuery}&content=./src/es/components/pages/Home.html">Home</a></li>
+        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryDefault}&content=./src/es/components/pages/Home.html">Home</a></li>
+        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryCustomProjectFooter}&content=./src/es/components/pages/CustomFooter.html">Custom Project Footer</a></li>
      </ul>
     `
     </script>
