--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryDefault}&content=./src/es/components/pages/Home.html">Home</a></li>
         <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryCustomProjectFooter}&content=./src/es/components/pages/CustomFooter.html">Custom Project Footer</a></li>
         <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryDefault}&content=./src/es/components/pages/CustomStyles.html">Custom Color Styles</a></li>
+        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryDefault}&content=./src/es/components/pages/BlockGrid.html">BlockGrid Playground</a></li>
      </ul>
     `
     </script>
