--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <h3>Pages</h3>
     <div id=pages></div>
     <script>
+      const template = 'TemplateV2'
       const rootFolder = 'src'
       const css = './src/css/variablesCustom.css'
       const login = './src/es/components/web-components-toolbox/src/es/components/msrc/login/default-/default-.html'
-      const logo = './src/es/components/atoms/logo/default-/default-.html'
+      const logo = './src/es/components/atoms/logo/v2-/v2-.html'
       const nav = './src/es/components/molecules/navigation/default-/default-.html'
       const footer = './src/es/components/organisms/footer/default-/default-.html'
       const footerCustom = './src/es/components/organisms/footer/custom-/custom-.html'
@@ -29,10 +30,11 @@
       const pageQueryCustomProjectFooter = `rootFolder=${rootFolder}&css=${css}&login=${login}&logo=${logo}&nav=${nav}&footer=${footerCustom}`
       document.querySelector('#pages').innerHTML = /* HTML */`
       <ul>
-        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryDefault}&content=./src/es/components/pages/Home.html">Home</a></li>
-        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryCustomProjectFooter}&content=./src/es/components/pages/CustomFooter.html">Custom Project Footer</a></li>
-        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryDefault}&content=./src/es/components/pages/CustomStyles.html">Custom Color Styles</a></li>
-        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQueryDefault}&content=./src/es/components/pages/BlockGrid.html">BlockGrid Playground</a></li>
+        <li><a href="./src/es/components/web-components-toolbox/docs/${template}.html?${pageQueryDefault}&content=./src/es/components/pages/Home.html">Home</a></li>
+        <li><a href="./src/es/components/web-components-toolbox/docs/${template}hhtml${pageQueryCustomProjectFooter}&content=./src/es/components/pages/CustomFooter.html">Custom Project Footer</a></li>
+        <li><a href="./src/es/components/web-components-toolbox/docs/${template}.html?${pageQueryDefault}&content=./src/es/components/pages/CustomStyles.html">Custom Color Styles</a></li>
+        <li><a href="./src/es/components/web-components-toolbox/docs/${template}.html?${pageQueryDefault}&content=./src/es/components/pages/BlockGrid.html">BlockGrid Playground</a></li>
+        <li><a href="./src/es/components/web-components-toolbox/docs/${template}.html?${pageQueryDefault}&content=./src/es/components/pages/V2.html">V2</a></li>
      </ul>
     `
     </script>
