--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>web-components-toolbox-mutobo-2.0</h1>
+    <h1>web-components-toolbox-cafe-royal</h1>
     <h2>Setup</h2>
     <ol>
       <li>git submodule update --init --recursive --remote --force</li>
@@ -18,24 +18,11 @@
     <h3>Pages</h3>
     <div id=pages></div>
     <script>
-      const template = 'TemplateV2'
-      const rootFolder = 'src'
-      const css = './src/css/variablesCustom.css'
-      const login = './src/es/components/web-components-toolbox/src/es/components/msrc/login/default-/default-.html'
-      const logo = './src/es/components/atoms/logo/v2-/v2-.html'
-      const nav = './src/es/components/molecules/navigation/default-/default-.html'
-      const footer = './src/es/components/organisms/footer/default-/default-.html'
-      const footerCustom = './src/es/components/organisms/footer/custom-/custom-.html'
-      const pageQueryDefault = `rootFolder=${rootFolder}&css=${css}&login=${login}&logo=${logo}&nav=${nav}&footer=${footer}`
-      const pageQueryCustomProjectFooter = `rootFolder=${rootFolder}&css=${css}&login=${login}&logo=${logo}&nav=${nav}&footer=${footerCustom}`
+      const pageQuery = 'rootFolder=src&css=./src/css/variablesCustom.css&logo=./src/es/components/atoms/logo/default-/default-.html&nav=./src/es/components/molecules/navigation/default-/default-.html&footer=./src/es/components/organisms/footer/default-/default-.html'
       document.querySelector('#pages').innerHTML = /* HTML */`
-      <ul>
-        <li><a href="./src/es/components/web-components-toolbox/docs/${template}.html?${pageQueryDefault}&content=./src/es/components/pages/Home.html">Home</a></li>
-        <li><a href="./src/es/components/web-components-toolbox/docs/${template}hhtml${pageQueryCustomProjectFooter}&content=./src/es/components/pages/CustomFooter.html">Custom Project Footer</a></li>
-        <li><a href="./src/es/components/web-components-toolbox/docs/${template}.html?${pageQueryDefault}&content=./src/es/components/pages/CustomStyles.html">Custom Color Styles</a></li>
-        <li><a href="./src/es/components/web-components-toolbox/docs/${template}.html?${pageQueryDefault}&content=./src/es/components/pages/BlockGrid.html">BlockGrid Playground</a></li>
-        <li><a href="./src/es/components/web-components-toolbox/docs/${template}.html?${pageQueryDefault}&content=./src/es/components/pages/V2.html">V2</a></li>
-     </ul>
+      <ul>  
+        <li><a href="./src/es/components/web-components-toolbox/docs/Template.html?${pageQuery}&content=./src/es/components/pages/Home.html">Home</a></li>
+      </ul>
     `
     </script>
     <hr />
